--- a/facebook.html
+++ b/facebook.html
@@ -40,7 +40,7 @@
 </head>
 <body>
     <img src="imagens/tela-facebook.jpg" alt="Facebook">
-    <a href="">ACESSE</a>
+    <a href="https://www.facebook.com/gustavoguanabara/" target="_blank">ACESSE</a>
 
     
 </body>
