--- a/twitter.html
+++ b/twitter.html
@@ -40,7 +40,7 @@
 </head>
 <body>
     <img src="imagens/tela-twitter.jpg" alt="Twitter">
-    <a href="">ACESSE</a>
+    <a href="https://www.twitter.com/guanabara/" target="_blank">ACESSE</a>
 
     
 </body>
